# havachat-library-server

./: .env.template  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  pytest.ini  voice_config_fr.json  voice_config_zh.json
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: AUDIO_GENERATION.md  CHARACTER_VALIDATION.md  GOOGLE_TRANSLATE_SETUP.md  NOTION_INTEGRATION.md  RERUN_JUDGE_NOTION.md  SETUP_NOTION_DATABASE.md  SPACY_MODELS.md  TRANSLATION_CACHE.md
scripts/: download_spacy_languages.sh
specs/001-pregen-pipeline/: BATCH_GENERATION_COMPARISON.md  GUIDE_FOR_GENERATING_LEARNING_ITEMS.md  OPTIMIZATION_BATCH_GENERATION.md  OPTIMIZATION_LEAN_MODELS.md  PHASE4_SUMMARY.md  PHASE6_SUMMARY.md  TOKEN_USAGE_COMPARISON.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tasks.md.backup
specs/001-pregen-pipeline/checklists/: requirements.md
specs/001-pregen-pipeline/contracts/: content_unit.schema.json  learning_item.schema.json  question_set.schema.json  validation_report.schema.json
src/: constants.py
src/havachat/cli/: __init__.py  enrich_grammar.py  enrich_vocab.py  generate_audio.py  generate_content.py  generate_learning_items.py  notion_sync.py  (+4 more)
src/libs/: logging_helper.py  vector_store_helper.py
src/models/: llm_judge_evaluation.py  notion_mapping.py
src/pipeline/: __init__.py
tests/: test_mandarin_optimized.py  test_pdf_converter.py  test_romanization.py  test_token_tracking.py  test_vocab_meilisearch.py
tests/contract/: __init__.py
tests/data/: Docling Technical Report 20204.md
tests/fixtures/: __init__.py  expected_chain_of_thought.json  french_vocab_sample.tsv  japanese_vocab_sample.json  mandarin_grammar_sample.csv  mandarin_vocab_sample.tsv
tests/integration/: __init__.py  test_character_validation.py  test_end_to_end_grammar.py  test_llm_judge_notion_pipeline.py
tests/unit/: __init__.py  test_character_validator.py  test_chinese_grammar_enricher.py  test_file_io.py  test_google_translate.py  test_llm_client.py  test_llm_judge.py  test_llm_judge_models.py  test_mandarin_grammar_enricher.py  test_notion_client.py  test_notion_mapping_manager.py  test_schemas.py  test_source_parsers.py  test_translation_cache.py
(+111 files in other folders)
