[project]
name = "havachat-library-server"
version = "0.1.0"
description = "Havachat Library Server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langgraph>=1.0.7",
    "instructor>=1.0.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "docling>=2.70.0",
    "sentence-transformers>=2.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "pytest>=8.0.0",
]
