[project]
name = "havachat-library-server"
version = "0.1.0"
description = "Havachat Library Server"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "azure-ai-translation-text>=1.0.1",
    "boto3>=1.35.0",
    "elevenlabs>=1.0.0",
    "google-cloud-translate>=3.0.0",
    "google-genai>=1.61.0",
    "loguru>=0.7.3",
    "meilisearch>=0.40.0",
    "opencc>=1.2.0",
    "pip>=26.0",
    "pykakasi>=2.3.0",
    "pypinyin>=0.55.0",
    "python-dotenv>=1.2.1",
    "spacy>=3.8.11",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "sacrebleu>=2.6.0",
    "tqdm>=4.67.1",
]

langgraph = [
    "langchain>=1.2.7",
    "langchain-core>=1.2.7",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.0.7",
    "instructor>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
]

pdf = [
    "pandas>=2.0.0",
    "docling>=2.70.0",
]

test = [
    "pytest>=8.0.0",
]

[project.scripts]
init = "main:main"
